<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.jatingarg.section2.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Random number should appear here"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:id="@+id/generateBtn"
        android:padding="5dp"
        android:text="Generate number"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop Service"
        android:id="@+id/stopServiceBtn"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="View Data"
        android:background="@color/colorAccent"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/viewDataBtn"/>

</LinearLayout>
